<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_login">

    <EditText
        android:id="@+id/text_login2"
        android:layout_width="235dp"
        android:layout_height="37dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="68dp"
        android:autofillHints=""
        android:ems="10"

        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login1"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/text_login1"
        android:layout_width="239dp"
        android:layout_height="58dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/text_login2"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_login1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="328dp"
        android:text="@string/log_in"
        android:backgroundTint="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>